--- a/package.json
+++ b/package.json
@@ -2,7 +2,12 @@
 	"name": "oldworld",
 	"displayName": "OldWorld",
 	"description": "",
-	"version": "0.0.2",
+	"icon": "assets/oldworld.png",
+	"publisher": "diegogomez16",
+	"repository": {
+		"url": "https://github.com/dgox16/oldworld.vscode"
+	},
+	"version": "0.0.4",
 	"engines": {
 		"vscode": "^1.101.0"
 	},
